Alignment fix

--- a/_sass/_cards.scss
+++ b/_sass/_cards.scss
@@ -48,7 +48,7 @@
 @media (min-width: 768px) {
     .downloadLink {
         float: right;
-        margin-top: 3px;
+        margin-top: 0;
     }
     .cardHandle {
         width: auto;
